# hopfield-2026-mnist

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  evaluate.py  proposal.md  pyproject.toml  references.bib  train.py
.github/workflows/: tests.yml
configs/: ablation_no_cmkc.json  baseline.json  smoke.json
data/: sample_sequence.json
data/sample/: task_1_train.jsonl  task_1_val.jsonl  task_2_train.jsonl  task_2_val.jsonl
docs/: cluster_run.md  dataset_format.md  github_release_checklist.md
reports/: cluster_report_2026-03-19.md  hopfield_2026_results.md  hopfield_mnist_results.md  local_demo.md  smoke_report.md
scripts/: report_results.py  run_hopfield_2026_lab.py  run_hopfield_mnist.py  run_local_demo.py
scripts/cluster/: README.md  bootstrap_focus.sh  download_vqacl_assets.sh  run_coin_moe_stage.sh  submit_quad_nextqa.slurm  submit_quad_vqav2.slurm  sync_to_focus.ps1
src/cmkc/: __init__.py  config.py  data.py  memory.py  metrics.py  model.py  trainer.py
tests/: test_smoke.py
